turtleart.diskfour.DiskFour.scala.code
override def run() {
  quart(Couleur.BLACK); quart(Couleur.RED); quart(Couleur.YELLOW); quart(Couleur.PINK);
}



def quart(c) {
  for (i<- 1 to 90) {
    ligne(c); right(1);
  }
}

def ligne(c) {
  setCouleur(c);forward(100); backward(100);
}